--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "bot.js",
   "author": "Wave",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "bot.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "body-parser": "^1.19.0",
     "discord.js": "^12.2.0",
     "eris": "^0.11.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.3"
   }
 }
