--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Wave",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "bot.js"
+    "start": "npx nodemon bot.js"
   },
   "repository": {
     "type": "git",
